# strix

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
strix/agents/StrixAgent/: system_prompt.jinja
strix/interface/: main.py  tui.py  utils.py
strix/llm/: config.py  llm.py
strix/tools/agents_graph/: agents_graph_actions.py
